# 8667556_Get-Started-with-MLOps_1-0

./: README.md  data_processing_functions.py  feature_engineering_functions.py  preprocessing.py  pyproject.toml  settings.py
exercices/: p1_c2_corrige.ipynb  p1_c2_enonce.ipynb  p1_c3_corrige.ipynb  p1_c3_enonce.ipynb  p1_c4_corrige.ipynb  p1_c4_enonce.ipynb  p2_c1_corrige.ipynb  p2_c2_corrige.ipynb  p2_c2_enonce.ipynb  p2_c3_corrige.ipynb  p2_c3_enonce.ipynb  p3_c1_corrige.ipynb  p3_c1_enonce.ipynb  p3_c2_corrige.ipynb  p3_c2_enonce.ipynb  p3_c3_enonce.ipynb  p3_c4_corrige.ipynb  p3_c4_enonce.ipynb
exercices/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
exercices/catboost_info/learn/: events.out.tfevents
screencasts/: categorical_features_used.json  features_used.json  p1_c3_correlations.py  p1_c3_feature_engineering.py  p1_c3_scaling.py  p1_c4_cross_val.py  p2_c2_error_analysis_1.py  p2_c3_distributions.py  p3_c1_explainable_ml.py  p3_c2_bentoml.py  p3_c3_evidently.py  p3_c4_mlflow.py
screencasts/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
screencasts/catboost_info/learn/: events.out.tfevents
screencasts/mlruns/0/: meta.yaml
screencasts/mlruns/247887458207936819/: meta.yaml
screencasts/mlruns/247887458207936819/bee1b146e4ec490f9317f8875a288457/: meta.yaml
screencasts/mlruns/247887458207936819/e470a3f4236249f4b2e99371296c5df3/: meta.yaml
screencasts/mlruns/606155441474826095/: meta.yaml
screencasts/mlruns/675740370410610204/: meta.yaml
screenshots/: p1_c2.py  p1_c3.py  p1_c4.py  p2_c3.py
(+131 files in other folders)
