[tool.poetry]
name = "supervisedlearning"
version = "0.1.0"
description = "code du cours sur l'apprentissage supervise"
authors = ["Zakaria BOUAYYAD"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# bentoml = "^1.3.2"
scikit-learn = "^1.5.1"
polars = "^1.4.1"
pandas = "^2.2.2"
pyarrow = "<16.0.0"
xgboost = "^2.1.1"
mlflow = "^2.15.1"
evidently = "^0.4.36"
seaborn = "^0.13.2"
catboost = "^1.2.5"
shap = "^0.46.0"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
jupyter = "^1.0.0"

[build-system]
package-mode = false
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
